--- a/_posts/2024-11-21-5.md
+++ b/_posts/2024-11-21-5.md
@@ -74,7 +74,7 @@ struct node{
 
 那么，二叉搜索树又是什么呢？
 
-简单而言，就是一棵二叉树，满足对于任意节点 $x$，其左、右节点 $l_x,r_x$ 满足 $\large value_{l_x}<value_x<value_{r_x}$。（当然，大于也行，但**本文讨论的是小于**）
+简单而言，就是一棵二叉树，满足对于任意节点 $x$，其左、右节点 $l_x,r_x$ 满足 $value_{l_x}<value_x<value_{r_x}$。（当然，大于也行，但**本文讨论的是小于**）
 
 这样我们便可以很方便的作树上查找等处理，但是这样有可能会被卡成一条长度接近于 $n$ 的单链（令节点数为 $n$），最终时间复杂度退化为 $\mathcal O(n)$。
 
