--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -30,22 +30,19 @@ words:
 
 # 待办事项
 
-*斜体* 的是不会的，**加粗**的是正在写的，<u>下划线</u>的是暂缓的。
+*斜体* 的是不会的，**加粗**的是正在写的，<u>下划线</u>的是暂
 
-2. 排列生成算法：序数法、字典序法、换位法
-3. 莫比乌斯变换
-4. **容斥原理与鸽巢原理**
-5. **错位排列**
-6. 群论
-7. Burnside 引理与 Pólya 定理
-8. 可重复圆排列（莫比乌斯变换）
-9. 群论、集合论的基本内容
-10. 多项式系数
-11. 上升幂与下降幂
-12. 伯努利数
-13. 不定方程非负整数解计数
-14. 容斥原理与第二类 Stirling 数、
-15. 多重组合数 与 多重集的组合数
+1. 莫比乌斯变换
+2. 群论
+3. Burnside 引理与 Pólya 定理
+4. 可重复圆排列（莫比乌斯变换）
+5. 群论的基本内容
+6. 多项式系数
+7. 上升幂与下降幂
+8. 伯努利数
+9. 不定方程非负整数解计数
+10. 容斥原理与第二类 Stirling 数、
+13. 多重组合数 与 多重集的组合数
 
 ***
 
@@ -409,7 +406,7 @@ $$
 <details class="note">
     <summary>证明</summary>
     <details class="note">
-        <summary>引理一：$(a+b)^n$ 的每一项的次数和均为 $n$</summary>
+        <summary>引理：$(a+b)^n$ 的每一项的次数和均为 $n$</summary>
         <p>
             考虑数学归纳法。
         </p>
@@ -417,20 +414,20 @@ $$
             $n=0$ 时有 $(a+b)^0=1$，满足次数和为 $1$。
         </p>
         <p>
-            假设 $n=k$ 时，引理一成立。
+            假设 $n=k$ 时，引理成立。
         </p>
         <p>
             则 $(a+b)^{k+1}=(a+b)(a+b)^k=a(a+b)^k+b(a+b)^k$，显然 $a(a+b)^k$ 展开后每一项的次数和均为 $k+1$，$b(a+b)^k$ 同理。
         </p>
         <p>
-            故，引理一成立。
+            故，引理成立。
         </p>
     </details>
     <p>
         设 $(a+b)^n=\sum\limits_{i=0}^np_ia^ib^{n-i}$。
     </p>
     <p>
-        想到得到 $a^ib^{n-i}$，即从 $n$ 个 $a+b$ 中选出 $i$ 个 $a$，即 $p_i=\dbinom{n}{i}$。
+        想要得到 $a^ib^{n-i}$，即从 $n$ 个 $a+b$ 中选出 $i$ 个 $a$，确定 $n-i$ 个 $b$（每一个 $(a+b)$ 会贡献一个 $a$ 或一个 $b$），即 $p_i=\dbinom{n}{i}$。
     </p>
     <p>
         故：
@@ -441,6 +438,7 @@ $$
         $$
     </p>
 </details>
+
 
 
 
@@ -695,17 +693,27 @@ int main(){
 
 ## 扩展卢卡斯定理 exLucas 定理
 
+> 也叫做扩展卢卡斯算法（exLucas 算法），但是各个地方叫法不一。
+
 ~~虽然我很想说这是个算法不是定理。。。~~
 
-当模数 $p$ 为合数不为质数时，Lucas 定理不再适用，可以使用 exLucas 定理来解决。
+当模数 $P$ 为合数不为质数时，Lucas 定理不再适用，可以使用 exLucas 定理来解决。
 
 求 $\dbinom{n}{m}\bmod P$，$P$ 可能为合数。
 
+记 $f_n$ 表示对 $n!$ 进行质因数分解后含有的 $p$ 的个数。
+
 ### 1.中国剩余定理
 
-先将 $P$ 进行质因数分解：$P=\prod\limits_{i=1}^kp_i^{c_i}$，其中 $p_i$ 为质数。
+先将 $P$ 进行质因数分解：
 
-对于 $i\ne j$，总有 $\gcd\left(tp_i^{c_i},p_j^{c_j}\right)=1$，所以可以**构造**如下 $k$ 个**同余方程**：
+$$
+P=\prod\limits_{i=1}^kp_i^{c_i}
+$$
+
+其中 $p_i$ 为质数。
+
+对于 $\forall i\ne j$，总有 $\gcd\left(p_i^{c_i},p_j^{c_j}\right)=1$，所以可以**构造如下 $k$ 个同余方程**：
 
 $$
 \left\{
@@ -713,13 +721,13 @@ $$
 a_1&\equiv \binom{n}{m}\pmod{p_1^{c_1}}\\
 a_2&\equiv \binom{n}{m}\pmod{p_2^{c_2}}\\
 a_3&\equiv \binom{n}{m}\pmod{p_3^{c_3}}\\
-&\ \ \ \ \ \ \ \ \ \ \ \ \ \ \cdots\\
+&\cdots\\
 a_k&\equiv \binom{n}{m}\pmod{p_k^{c_k}}
 \end{aligned}
 \right.
 $$
 
-当我们求出 $a_1,a_2,a_3,\cdots,a_k$ 后，就可以通过[中国剩余定理](/2025/02/05/1/#crt-中国剩余定理)来求出 $\dbinom{n}{m}$。
+当我们求出 $a_1,a_2,a_3,\cdots,a_k$ 后，就可以通过[中国剩余定理（CRT）](/2025/02/05/1/#crt-中国剩余定理)来求出 $\dbinom{n}{m}$。
 
 ### 2.移除分子分母中的质数
 
@@ -728,17 +736,16 @@ $$
 代入组合数计算公式，得：
 
 $$
-\large a_i=\frac{n!}{m!(n-m)!}\bmod p_i^{c_i}
+a_i=\frac{n!}{m!(n-m)!}\bmod p_i^{c_i}
 $$
 
 存在除法，模意义下**需要求逆元**。
 
 然而分母 $m!(n-m)!$ 不一定与 $p_i^{c_i}$ 互质，因此我们需要先提取出 $m!(n-m)!$ 中所有的质因数 $p_i$。
 
-原式转化为：
-
+记 $x=f_n,y=f_m,z=f_{n-m}$，原式转化为：
 $$
-\Large a_i=\frac{\frac{n!}{p_i^x}}{\frac{m!}{p_i^y}\times \frac{(n-m)!}{p_i^z}}\times p_i^{x-y-z}\bmod p_i^{c_i}
+\large a_i=\frac{\frac{n!}{p_i^x}}{\frac{m!}{p_i^y}\times \frac{(n-m)!}{p_i^z}}\times p_i^{x-y-z}\bmod p_i^{c_i}
 $$
 
 其中，$x$ 表示 $n!$ 的 $p_i$ 因子的个数，$y$ 表示 $m!$ 的 $p_i$ 因子的个数，$z$ 表示 $(n-m)!$ 的 $p_i$ 因子的个数。
@@ -746,7 +753,7 @@ $$
 再次转换：
 
 $$
-\Large a_i=p_i^{x-y-z}\times\frac{\frac{n!}{p_i^x}\bmod p_i^{c_i}}{\frac{m!}{p_i^y}\bmod p_i^{c_i}\times \frac{(n-m)!}{p_i^z}\bmod p_i^{c_i}}
+\large a_i=p_i^{x-y-z}\times\frac{\frac{n!}{p_i^x}\bmod p_i^{c_i}}{\frac{m!}{p_i^y}\bmod p_i^{c_i}\times \frac{(n-m)!}{p_i^z}\bmod p_i^{c_i}}
 $$
 
 那么，我们就是需要求**三次**形如 $\dfrac{n!}{p_i^x}\bmod p_i^{c_i}$ 的问题，然后组合在一起成为答案。
@@ -787,7 +794,7 @@ $$
 
 对于中间一项，可以使用 Wilson 定理的推论。
 
-Wilson 定理的推论记 $(m!)_p$ 为 $1\sim m$ 中不被 $p$ 整除的数的乘积。
+Wilson 定理的推论记 $(m!)_p$ 为 $\lbrace1,2,3,\cdots,m\rbrace$ 中不被 $p$ 整除的数的乘积。
 
 显然：
 
@@ -922,14 +929,6 @@ $$
 $$
 \frac2{n+1}\binom{2n}{n}
 $$
-
-## 排列生成算法
-
-### 字典序法
-
-### 序数法
-
-### 换位法
 
 # 生成函数与递推关系
 
@@ -1243,7 +1242,7 @@ $$
            G(x)&=\sum_{n=0}^\infty x^{2n}\\
            &=\sum_{n=0}^\infty \left(x^2\right)^n\\
            &=\sum_{n=0}^\infty x^nx^n\\
-           &=x\cdot \frac{1}{1-x^2}
+           &=\frac{1}{1-x^2}
            \end{aligned}
            $$
        </p>
@@ -1252,7 +1251,7 @@ $$
        </p>
        <hr>
        <p>
-           方法其实还有很多，比如利用等比数列。
+           方法其实<b>还有很多</b>，比如利用等比数列。
        </p>
    </details>
    
@@ -2568,13 +2567,15 @@ $$
         </li>
         <li>
             <p>
-                $P_1\sim P_{n-1}$ 中存在至少一个 $P_i=i$：将其与 $P_n=n$ 交换即可得到长度为 $n$ 的错位排列。
+                $P_1\sim P_{n-1}$ 中存在一个 $P_i=i$：将其与 $P_n=n$ 交换即可得到长度为 $n$ 的错位排列。
             </p>
             <p>
-                因为元素的实际值与排列的个数无关，因此不妨令 $P_{n-1}=n-1$。
+                那么这种情况对答案的贡献就是 $(n-1)D_{n-2}$，因为除 $P_i=i$ 外的 $n-2$ 个元素是一个错位排列。
             </p>
-            <p>
-                那么这种情况对答案的贡献就是 $(n-1)D_{n-2}$。
+        </li>
+        <li>
+        	<p>
+                $P_1\sim P_{n-1}$ 中含有至少 $2$ 个 $P_i=i$：这种情况不可能使 $1\sim P_n$ 为错位排列，贡献为 $0$。
             </p>
         </li>
     </ul>
@@ -2582,6 +2583,7 @@ $$
         由加法原理，合并贡献得到 $D_n=(n-1)(D_{n-1}+D_{n-2})$。
     </p>
 </details>
+
 
 变形上式，得到：
 
