--- a/_posts/2025-6-7-1.md
+++ b/_posts/2025-6-7-1.md
@@ -120,7 +120,7 @@ $$
 
 #### 对角线法则
 
-如图，<span style="color:red">红色</span>部分冠以正号，<span style="color:blue">蓝色</span>部分被冠以负号：
+如图，**<span style="color:red">红色实线</span>**部分冠以正号，**<span style="color:blue">蓝色虚线</span>**部分被冠以负号：
 
 ![](/img/2025/06/001.png)
 
@@ -174,7 +174,7 @@ $$
 
 ## 行列式的逆序数定义
 
-也称作“逆序对定义”、”全排列定义“等。
+也称作“逆序对定义”、“全排列定义”等。
 
 ### 三阶行列式
 
@@ -300,12 +300,13 @@ $$
 <details class="note">
     <summary>答案解析</summary>
     <p>
-        可以发现，要么可以出现 $x^3$ 项的排列只有两种：$\langle1,2,3,4\rangle,\langle1,2,4,3\rangle$。计算即可，系数为 $1-2=-1$。
+        可以发现，可以出现 $x^3$ 项的排列只有两种：$\langle1,2,3,4\rangle,\langle1,2,4,3\rangle$。计算即可，系数为 $1-2=-1$。
     </p>
 </details>
+
 ### 转置定理
 
-记方阵 $A$ 的转置方阵为 $$A'$$（也记作 $A^T$）。实际上，**让 $A$ 关于其主对角线对称**即可得到 $A'$。
+记方阵 $A$ 的转置方阵为 $$A'$$（也记作 $A^T,A^\tau$）。实际上，**让 $A$ 关于其主对角线对称**即可得到 $A'$。
 
 定义式是从 $n^2$ 个元素中**选出不同行且不同列的 $n$ 个元素**，然而实际上也有另一种形式：
 
