--- a/_posts/2025-01-22-6.md
+++ b/_posts/2025-01-22-6.md
@@ -11,8 +11,10 @@ tags:
   - 提高+/省选−
   - DP
   - 数位DP
-  - 分段打表
+  - 分块
+  - 打表
 words:
+  - 分块打表
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P6218)
@@ -23,9 +25,9 @@ words:
 
 注意一个数的二进制不包括其前导 $0$。例如对于 $9$，其二进制仅仅是 $1001$。
 
-# 分段打表
+# 分块打表
 
-考虑到 $1\leq l\leq r\leq 2\times 10^9$，并不是很大，考虑分段打表。
+考虑到 $1\leq l\leq r\leq 2\times 10^9$，并不是很大，考虑分块打表。
 
 计算机一秒内能够处理的数据规模约为 $4\times 10^8$，我们使用 $10^7$ 作为一段的长度（过短会导致代码长度过长），只有 $200$ 段，在可接受范围内。
 
