--- a/_posts/2025-6-28-3.md
+++ b/_posts/2025-6-28-3.md
@@ -29,7 +29,7 @@ words:
 
 既然题目要维护众数，那么分块也维护众数：记 $\textit{most}_{i,j}$ 表示第 $i$ 块至第 $j$ 块的众数。
 
-求出 $\textit{most}_{i,j}$ 是 $\mathcal O(n\sqrt n)$ 的：可以 $\mathcal O(\sqrt n)$ 枚举一个 $i$，随后在 $\mathcal O(n)$ 的时间内求出 $\textit{most}_{i,1}\sim\textit{most}_{i,\sqrt n}$。
+求出 $$\textit{most}_{i,j}$$ 是 $\mathcal O(n\sqrt n)$ 的：可以 $\mathcal O(\sqrt n)$ 枚举一个 $i$，随后在 $\mathcal O(n)$ 的时间内求出 $$\textit{most}_{i,1}\sim\textit{most}_{i,\sqrt n}$$。
 
 那么，对于一次询问的 $l,r$，如图所示：
 
@@ -47,15 +47,21 @@ $a_l\sim a_r$ 的众数，显然就是图中橙色部分的众数，或绿色部
 
 * $pr-pl\geq2$ 时，橙色部分众数即 $\textit{most}_{pl+1,pr-1}$。
 
-  之后同上类似地 $\mathcal O(\sqrt n)$扫一遍绿色部分，统计出其中数 $x_i$ 的出现次数 $y_i$。
+  之后同上类似地 $\mathcal O(\sqrt n)$ 扫一遍绿色部分，统计出其中数 $x_i$ 的出现次数 $y_i$。
 
   但是我们还不知道 $x_i$ 能否成为众数，因此需要先知道橙色部分里 $x_i$ 的出现次数。
 
   这也可以维护。
 
-  记 $\textit{cnt}_{i,j}$ 表示前 $i$ 个块中 $j$ 的出现次数，则可以先 $\mathcal O(n\sqrt n)$ 求出第 $i$ 个块中 $j$ 的出现次数，再 $\mathcal O(n\sqrt n)$ 做一次前缀和即可。
+  记 $\textit{cnt}_{i,j}$ 表示前 $i$ 个块中 $j$ 的出现次数，则可以在**预处理**的时候先 $\mathcal O(n\sqrt n)$ 求出第 $i$ 个块中 $j$ 的出现次数，再 $\mathcal O(n\sqrt n)$ 做一次前缀和即可。
 
-  这是我们就知道了橙色部分 $x_i$ 的出现次数为 $\textit{cnt}_{\textit{pr}-1,x_i}-\textit{cnt}_{\textit{pl},x_i}+y_i$，于是可以判断 $x_i$ 是否为众数。
+  这时我们就知道了橙色部分 $x_i$ 的出现次数为：
+
+  $$
+  \textit{cnt}_{\textit{pr}-1,x_i}-\textit{cnt}_{\textit{pl},x_i}+y_i
+  $$
+  
+  于是可以判断 $x_i$ 是否为众数。
 
 # AC 代码
 
