--- a/_posts/2025-7-5-1.md
+++ b/_posts/2025-7-5-1.md
@@ -45,15 +45,16 @@ words:
 <details class="note">
     <summary>关于操作顺序问题</summary>
     <p>
-        对于 `ON` 和 `OFF` 操作，对于一个元素只需要操作一次。否则前几次都是无意义的（会被覆盖）。
+        对于 <code>ON</code> 和 <code>OFF</code> 操作，对于一个元素只需要操作一次。否则前几次都是无意义的（会被覆盖）。
     </p>
     <p>
-        对于 `TOG` 操作，`TOG` 之后被 `ON` 或 `OFF` 操作覆盖也是无意义的，因此只能在这两个操作之后进行。而两次 `TOG` 操作也是无意义的。
+        对于 <code>TOG</code> 操作，<code>TOG</code> 之后被 <code>ON</code> 或 <code>OFF</code> 操作覆盖也是无意义的，因此只能在这两个操作之后进行。而两次 <code>TOG</code> 操作也是无意义的。
     </p>
     <p>
         这样，每个元素至多进行两次操作。
     </p>
 </details>
+
 于是就可以 DP 了。
 
 # AC 代码
