--- a/_posts/2025-02-05-1.md
+++ b/_posts/2025-02-05-1.md
@@ -39,7 +39,7 @@ words:
   - 题解：【模板】二元一次不定方程 (exgcd)
 ---
 
-> [参考资料](/file/2025/02/math.pdf)
+> [参考资料](/file/2025/02/math.pdf) [参考资料](/file/2025/07/number-theory.pdf)
 
 本文中出现的代数式、数，如无特殊说明，均为**整数**。
 
@@ -234,9 +234,9 @@ $$
 
 那么直到 $b=0$ 时，可以直接解得一组整数特解 $$\begin{cases}x=1\\y=0\end{cases}$$。
 
-设最终递归出来的解为 $$\begin{cases}x=x_0\\y=y_0\end{cases}$$
+设最终递归出来的解为 $$\begin{cases}x=x_0\\y=y_0\end{cases}$$。
 
-令 $\Delta b=\dfrac{b}{\gcd(a,b)},\Delta a=\dfrac{a}{\gcd(a,b)}$，则对于 $\forall k\in \N^*$，方程存在一组解为 $$\begin{cases}x=x_0+k\Delta b\\y=y_0-k\Delta a\end{cases}$$。
+令 $\Delta b=\left\vert\dfrac{b}{\gcd(a,b)}\right\vert，\Delta a=\left\vert\dfrac a{\gcd(a,b)}\right\vert$，则对于 $\forall k\in \N^*$，方程存在一组解为 $$\begin{cases}x=x_0+k\Delta b\\y=y_0-k\Delta a\end{cases}$$。
 
 ### 参考代码
 
@@ -378,7 +378,7 @@ void exgcd(int a,int &x,int b,int &y){
 
 对于无解，即 $\gcd(a,b)\nmid c$，很好判断。
 
-先通过 exgcd 求出一组特解 $(x_0,y_0)$，则 $$\begin{cases}x=x_0+k\Delta b\\y=y_0-k\Delta a\end{cases}$$ 也是原方程得解。
+先通过 exgcd 求出一组特解 $(x_0,y_0)$，则 $$\begin{cases}x=x_0+k\Delta b\\y=y_0-k\Delta a\end{cases}$$ 也是原方程的解。$\Delta b$ 为 $b$ 的单次变化量，最小为 $\Delta b=\left\vert\dfrac{b}{\gcd(a,b)}\right\vert$，$\Delta a=\left\vert\dfrac a{\gcd(a,b)}\right\vert$。
 
 先求 $x$ 的最小正整数解 $x_{\min}$，即 $x_0+k\Delta b$ 最小，显然 $x_{\min}=x_0\bmod \Delta b$。
 
@@ -596,6 +596,28 @@ $$
 */</span> 
 </pre></td></tr></tbody></table></div></code></pre></div></div>
 </details>
+
+### exgcd 与同余方程
+
+exgcd 求解的是不定方程：
+
+$$
+ax+by=\gcd(a,b)
+$$
+
+而同余方程形如：
+
+$$
+ax\equiv c\pmod b
+$$
+
+可以将同余方程转化为：
+
+$$
+ax+by=c
+$$
+
+进而使用 exgcd 求解。
 
 ## 线性求逆元
 
@@ -1157,6 +1179,24 @@ for(int i=2;i<=n;i++){
 </pre></td></tr></tbody></table></div></code></pre></div></div>
 </details>
 
+### exexCRT
+
+即形如：
+
+$$
+\begin{cases}
+f_1x&\equiv a_1\pmod{p_1}\\
+f_2x&\equiv a_2\pmod{p_2}\\
+f_3x&\equiv a_3\pmod{p_3}\\
+&\cdots\\
+f_nx&\equiv a_n\pmod{p_n}\\
+\end{cases}
+$$
+
+多了一个**系数** $f_i$。
+
+同样可以用类似 exCRT 的方法两两合并解决，[具体见此](/2025/07/10/3/)。
+
 # 离散对数
 
 所谓离散对数，即模意义下取对数。
@@ -1167,7 +1207,7 @@ for(int i=2;i<=n;i++){
 
 ## BSGS 算法
 
-在 OI 中，BSGS 算法（Baby-Step Giant-Step，大步小步算法）常用来求解离散对数。
+在 OI 中，BSGS 算法（Baby-Step Giant-Step，大步小步算法~~北上广深算法~~）常用来求解离散对数。
 
 BSGS 算法要求 $a\perp p$，求 $x$ 使得 $a^x\equiv b\pmod p$。
 
@@ -1374,6 +1414,7 @@ exBSGS 可解决 $a\perp p$ 不成立的情况。
 首先特判掉 $x=0$ 的情况，即 $b=1$ 或 $p=1$。
 
 考虑分块，令 $B=\left\lceil\sqrt{2\varphi(p)}\right\rceil,x=qB-r,0\leq q,r\leq B$，则有：
+
 $$
 a^{qB-r}\equiv b\pmod p\\
 \Downarrow\\
@@ -1446,7 +1487,7 @@ if(x<2147483647){
 2
 3
 4
-5
+5	
 6
 7
 8
@@ -1872,16 +1913,6 @@ Lucas 定理只需要递归使用即可，即递归计算 $\dbinom{\lfloor\frac 
 
 ## exLucas 算法（exLucas 定理）
 
-<details class="note" open>
-    <summary>前置知识</summary>
-    <p>
-        <ul>
-            <li><a href="#exgcd 求乘法逆元">exgcd 求乘法逆元</a></li>
-            <li><a href="#CRT">CRT</a></li>
-            <li><a href="#Wilson 定理">Wilson 定理</a></li>
-        </ul>
-    </p>
-</details>
 
 exLucas 算法可以求 $\dbinom{n}{m}\bmod P$，$P$ **不一定为质数**。（但是，exLucas 实际上和 Lucas 没有多大关系……）
 
@@ -2329,6 +2360,197 @@ int Wilson(int n,int p,int pc){
 </pre></td></tr></tbody></table></div></code></pre></div></div>
 </details>
 
+> [[国家集训队] 礼物](https://www.luogu.com.cn/problem/P2183)
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm>
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+typedef long long ll;
+#define ll __int128
+#define int __int128
+constexpr const int M=5;
+long long w[M+1];
+constexpr const int PMAX=1e5;
+void exgcd(ll a,ll &x,ll b,ll &y){
+	if(!b){
+		x=1;
+		y=0;
+		return;
+	}
+	ll tmp;
+	exgcd(b,tmp,a%b,x);
+	y=tmp-a/b*x;
+}
+ll inverse(ll a,ll p){
+	ll x,y;
+	exgcd(a,x,p,y);
+	x%=p;
+	if(x<0){
+		x+=p;
+	}
+	return x;
+}
+int qpow(int base,int n){
+	int ans=1;
+	while(n){
+		if(n&1){
+			ans=1ll*ans*base;
+		}
+		base=1ll*base*base;
+		n>>=1;
+	}
+	return ans;
+}
+int CRT(vector<int>a,vector<int>p){
+	ll L=1;
+	for(int &i:p){
+		L*=i;
+	}
+	ll x=0;
+	for(int i=0;i<a.size();i++){
+		ll q=L/p[i];
+		x=(x+1ll*a[i]*q%L*inverse(q,p[i])%L)%L;
+	}
+	if(x<0){
+		x+=L;
+	}
+	return x;
+}
+int v(ll n,ll p){
+	int ans=0;
+	do{
+		n/=p;
+		ans+=n;
+	}while(n);
+	return ans;
+}
+int Wilson(int n,int p,int pc){
+	int ans=1;
+	vector<int>f(pc);
+	f[0]=1;
+	for(int i=1;i<pc;i++){
+		f[i]=i%p?f[i-1]*i%pc:f[i-1];
+	}
+	bool flag=p!=2||pc<=4;
+	while(n>1){
+		if((n/pc)&flag){
+			ans=pc-ans;
+		}
+		ans=ans*f[n%pc]%pc;
+		n/=p;
+	}
+	return ans;
+}
+void breakDown(int P,vector<int>&p,vector<int>&pc){
+	int pp=P;
+	for(int i=2;i*i<=pp;i++){
+		if(pp%i==0){
+			p.push_back(i);
+			pc.push_back(1);
+			while(pp%i==0){
+				pc.back()*=i;
+				pp/=i;
+			}
+		}
+	}
+	if(pp>1){
+		p.push_back(pp);
+		pc.push_back(pp);
+	}
+} 
+long long exLucas(ll n,ll m,ll P){
+	if(n<m){ 
+		return 0;
+	}
+	vector<int>p,pc;
+	breakDown(P,p,pc);
+	vector<int>a(pc.size());
+	for(int i=0;i<p.size();i++){
+		int nWilson=Wilson(n,p[i],pc[i]);
+		int mWilson=Wilson(m,p[i],pc[i]);
+		int nmWilson=Wilson(n-m,p[i],pc[i]);
+		a[i]=nWilson*inverse(mWilson*nmWilson%pc[i],pc[i])*qpow(p[i],v(n,p[i])-v(m,p[i])-v(n-m,p[i]));
+	}
+	return CRT(a,pc);
+}
+main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	ios::sync_with_stdio(false);
+	cin.tie(0);cout.tie(0);
+	
+	long long n,m,P;
+	cin>>P>>n>>m;
+	long long ans=1;
+	for(int i=1;i<=m;i++){
+		cin>>w[i];
+		ans=ans*exLucas(n,w[i],P)%P;
+		n-=w[i];
+		if(n<0){
+			cout<<"Impossible"<<endl;
+			return 0; 
+		} 
+	}
+	cout<<ans<<'\n';
+	
+	cout.flush();
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+
+# 数论分块
+
+数论分块用于快速计算：
+
+$$
+\sum_{i=1}^nf(i)g\left(\left\lfloor\dfrac ni\right\rfloor\right)
+$$
+
+数论分块的原理即本质不同的 $\left\lfloor\dfrac ni\right\rfloor$ 只有至多 $\mathcal O\left(\sqrt n\right)$ 种。
+
+<details class="note">
+    <summary>证明</summary>
+    <ul>
+        <li>当 $i\leq\sqrt n$ 时，$i$ 只有 $\mathcal O\left(\sqrt n\right)$ 种取值。</li>
+        <li>当 $i>\sqrt n$ 时，$\dfrac ni\leq\sqrt n$，$\left\lfloor\dfrac ni\right\rfloor$ 只有 $\mathcal O\left(\sqrt n\right)$ 种取值。</li>
+    </ul>
+    <p>
+        故，本质不同的 $\left\lfloor\dfrac ni\right\rfloor$ 只有至多 $\mathcal O\left(\sqrt n\right)$ 种取值。
+    </p>
+</details>
+因此 $\left\lfloor\dfrac ni\right\rfloor$ 相同值肯定是连续的，那么就可以找出这 $\mathcal O\left(\sqrt n\right)$  区间 $[l_1,r_1],[l_2,r_2],\cdots,[l_k,r_k]$（$r_i+1=l_{i+1}$），求出：
+
+$$
+g\left(\left\lfloor\dfrac nl\right\rfloor\right)\sum_{j=l_i}^{r_i}f(j)
+$$
+
+将 $i$ 个答案相加即可。
+
+若分块后可以 $\mathcal O(1)$ 求出，则数论分块是 $\mathcal O\left(\sqrt n\right)$ 的。
+
+# 积性函数
+
+# 莫比乌斯反演
+
+# 杜教筛
+
 # 群论
 
 群论是近代数学的基础之一。
@@ -2450,6 +2672,4 @@ $$
 #### 平凡子群
 
 对于任意群 $(G,\circ,e)$，总有平凡子群 $(G,\circ,e)$ 和 $(\lbrace e\rbrace,\circ,e)$。
-
-# 莫比乌斯反演
 
