--- a/_posts/2025-7-9-1.md
+++ b/_posts/2025-7-9-1.md
@@ -13,8 +13,7 @@ tags:
   - exgcd
   - CRT
 words:
-  - [TJOI2009]猜数字
-
+  - "[TJOI2009]猜数字"
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P3868)
