--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -14,35 +14,35 @@ tags:
   - 省选/NOI−
   - 未完
 words:
-  - 卢卡斯定理 Lucas 定理
-  - 扩展卢卡斯定理 exLucas 定理
   - 二项式定理
   - 二项式推论
   - 加法原理
   - 乘法原理
   - 加乘原理
   - 生成函数
-  - 题解：洛谷P3807
-  - 题解：卢卡斯定理/Lucas 定理
+  - 容斥原理鸽巢原理抽屉原则
+  - "Min-max容斥原理"
+  - "Min-max 容斥原理"
+  - "kth Min-Max容斥原理"
+  - "kth Min-Max 容斥原理"
+  - 牛顿二项式定理
+  - 二项式反演
+  - 分拆数
+  - 斯特林数卡特兰数贝尔数皮萨诺周期欧拉函数CatalanStirlingBell
+  - 错位排列错排问题
 ---
-> [参考资料](/file/2025/02/combinatorial-mathematics.rar) [参考资料](/file/2025/02/math.pdf)
+> [参考资料](/file/2025/02/combinatorial-mathematics.rar) [参考资料](/file/2025/02/math.pdf) [参考资料](/file/2025/07/math2.pdf)
 
 
 # 待办事项
 
 *斜体* 的是不会的，**加粗**的是正在写的，<u>下划线</u>的是暂
 
-1. 莫比乌斯变换
-2. 群论
-3. Burnside 引理与 Pólya 定理
-4. 可重复圆排列（莫比乌斯变换）
-5. 群论的基本内容
-6. 多项式系数
-7. 上升幂与下降幂
-8. 伯努利数
-9. 不定方程非负整数解计数
-10. 容斥原理与第二类 Stirling 数、
-13. 多重组合数 与 多重集的组合数
+1. 可重复圆排列（莫比乌斯变换）
+2. 伯努利数
+3. 不定方程非负整数解计数
+4. 容斥原理与第二类 Stirling 数
+5. 多重组合数 与 多重集的组合数
 
 ***
 
@@ -50,16 +50,14 @@ words:
 2. *同一行的第一类 Stirling 数计算*
 3. *同一列的第一类 Stirling 数计算*
 4. *Stirling 数通项公式证明*
-5. *卡特兰数生成函数证明*
-6. *牛顿二项式定理*
 7. *恰好 $k$ 部分分拆数与至多 $k$ 部分分拆数*
 8. *分拆数的边界*
 9. *分拆数的五边形数定理*
 
 ***
 
-1. <u>扩展 Lucas 定理的代码</u>
-2. <u>各种模板题的代码</u>
+1. <u>群论</u>
+2. <u>Burnside 引理与 Pólya 定理</u>
 
 # 排列与组合
 
@@ -526,134 +524,39 @@ $$
 
     多用于[求解生成函数的封闭形式](#求解生成函数的封闭形式)。通过二项式定理带入 $a=x,b=1$ 即可得证。
 
-## 卢卡斯定理 Lucas 定理
+### 广义牛顿二项式定理
 
-[参见此处](/2025/02/05/1/#Lucas 定理)。
-
-## 扩展卢卡斯定理 exLucas 定理
-
-> 也叫做扩展卢卡斯算法（exLucas 算法），但是各个地方叫法不一。
-
-~~虽然我很想说这是个算法不是定理。。。~~
-
-当模数 $P$ 为合数不为质数时，Lucas 定理不再适用，可以使用 exLucas 定理来解决。
-
-求 $\dbinom{n}{m}\bmod P$，$P$ 可能为合数。
-
-记 $f_n$ 表示对 $n!$ 进行质因数分解后含有的 $p$ 的个数。
-
-### 1.中国剩余定理
-
-先将 $P$ 进行质因数分解：
+设 $\alpha$ 为一个数，则：
 
 $$
-P=\prod\limits_{i=1}^kp_i^{c_i}
+(a+b)^\alpha=\sum_{i=0}^{\infty}\dbinom{\alpha}{i}a^ib^{\alpha-i}
 $$
 
-其中 $p_i$ 为质数。
-
-对于 $\forall i\ne j$，总有 $\gcd\left(p_i^{c_i},p_j^{c_j}\right)=1$，所以可以**构造如下 $k$ 个同余方程**：
+且需要重新定义组合数运算为：
 
 $$
-\left\{
-\begin{aligned}
-a_1&\equiv \binom{n}{m}\pmod{p_1^{c_1}}\\
-a_2&\equiv \binom{n}{m}\pmod{p_2^{c_2}}\\
-a_3&\equiv \binom{n}{m}\pmod{p_3^{c_3}}\\
-&\cdots\\
-a_k&\equiv \binom{n}{m}\pmod{p_k^{c_k}}
-\end{aligned}
-\right.
+\dbinom{\alpha}{i}=\dfrac{\alpha^{\underline{i}}}{i!}
 $$
 
-当我们求出 $a_1,a_2,a_3,\cdots,a_k$ 后，就可以通过[中国剩余定理（CRT）](/2025/02/05/1/#crt-中国剩余定理)来求出 $\dbinom{n}{m}$。
+### 二项式反演
 
-### 2.移除分子分母中的质数
-
-因为同余，因此不妨令 $a_i={\dbinom{n}{m}}\bmod p_i^{c_i}$。
-
-代入组合数计算公式，得：
+若 $g_n=\sum\limits_{i=0}^n\dbinom nif_i$，则有：
 
 $$
-a_i=\frac{n!}{m!(n-m)!}\bmod p_i^{c_i}
+f_n=\sum_{i=0}^n(-1)^{n-i}\dbinom nig_i
 $$
 
-存在除法，模意义下**需要求逆元**。
+***
 
-然而分母 $m!(n-m)!$ 不一定与 $p_i^{c_i}$ 互质，因此我们需要先提取出 $m!(n-m)!$ 中所有的质因数 $p_i$。
-
-记 $x=f_n,y=f_m,z=f_{n-m}$，原式转化为：
-$$
-\large a_i=\frac{\frac{n!}{p_i^x}}{\frac{m!}{p_i^y}\times \frac{(n-m)!}{p_i^z}}\times p_i^{x-y-z}\bmod p_i^{c_i}
-$$
-
-其中，$x$ 表示 $n!$ 的 $p_i$ 因子的个数，$y$ 表示 $m!$ 的 $p_i$ 因子的个数，$z$ 表示 $(n-m)!$ 的 $p_i$ 因子的个数。
-
-再次转换：
+若 $g_n=\sum\limits_{i=n}^\infty\dbinom inf_i$，则有：
 
 $$
-\large a_i=p_i^{x-y-z}\times\frac{\frac{n!}{p_i^x}\bmod p_i^{c_i}}{\frac{m!}{p_i^y}\bmod p_i^{c_i}\times \frac{(n-m)!}{p_i^z}\bmod p_i^{c_i}}
+f_n=\sum_{i=n}^\infty(-1)^{i-n}\dbinom nig_i
 $$
 
-那么，我们就是需要求**三次**形如 $\dfrac{n!}{p_i^x}\bmod p_i^{c_i}$ 的问题，然后组合在一起成为答案。
+***
 
-为了便于表述，记 $p_i=q,c_i=x$。
-
-记 $S(n)$ 为 $n!$ 提取出所有质因子 $q$ 后的值。即 $x=\left\lfloor\dfrac nq\right\rfloor,S(n)=\dfrac{n!}{q^x}$。
-
-则需要求的问题形如：
-
-$$
-S(n)\bmod q^k
-$$
-
-**<span style="color:red;">注意此处的 $n$ 不是上文组合数中的 $n$。</span>**
-
-### 3.Wilson 定理的推论
-
-考虑到：
-
-$$
-\begin{aligned}
-n!&=1\times 2\times 3\times\cdots\times n\\
-&=\left(q\times 2q\times 3q\times \cdots\times q\left\lfloor{\frac nq}\right\rfloor\right)\left(1\times 2\times 3\times \cdots\right)\\
-&=\prod_{i=1}^{\left\lfloor\frac nq\right\rfloor}q\times \prod_{i=1,q \nmid i}^ni\\
-&=q\times \left\lfloor\frac nq\right\rfloor!\times \prod_{i=1,q \nmid i}^ni
-\end{aligned}
-$$
-
-因此有：
-
-$$
-S(n)\equiv S\left(\left\lfloor\frac nq\right\rfloor\right)\times \left(\prod_{i=1,q\nmid i}^{q^k}i\right)^{\large \left\lfloor\frac{n}{q^k}\right\rfloor}\times \prod_{i=1,q\nmid i}^{n\bmod q^k}i
-\pmod {q^k}
-$$
-
-对于 $S\left(\left\lfloor\frac nq\right\rfloor\right)$，显然可以递归，后面两项暴力计算即可。
-
-对于中间一项，可以使用 Wilson 定理的推论。
-
-Wilson 定理的推论记 $(m!)_p$ 为 $\lbrace1,2,3,\cdots,m\rbrace$ 中不被 $p$ 整除的数的乘积。
-
-显然：
-
-$$
-\left(\prod_{i=1,q\nmid i}^{q^k}i\right)=\left((q^k!)_p\right)
-$$
-
-由 Wilson 定理的推论得：
-
-$$
-(q^k!)_q=
-\begin{cases}
-1 &q=2\land k\geq3\\
--1 &\text{otherwise.}
-\end{cases}
-$$
-
-中间一项直接算即可。
-
-时间复杂度：$\mathcal O(p\log p)$。
+事实上，**二项式反演就是容斥原理的特殊形式**。
 
 ## 格路问题 路径计数问题
 
@@ -1700,6 +1603,10 @@ $$
 
 注意此处之所以不是 $p(n-k,k-1)$ 而是 $p(n-1,j-1)$，是因为只考虑第 $k$ 项的取值，前面的会在递归或递推中考虑，不然会重复计数。
 
+### 解法三
+
+存在一种 $\mathcal O\left(n\sqrt n\right)$ 的解法，参见[参考资料](/file/2025/07/math2.pdf)。
+
 #### 生成函数
 
 <span style="color:red;">注意：所有分拆数的生成函数的起始位置都是 $1$，而不是 $0$，因为不能划分为 $0$ 个部分。</span>
@@ -1878,6 +1785,32 @@ $$
 6. $\gcd(f_m,f_n)=f_{\gcd(m,n)}$。
 7. 以 $f_i,f_{i+1}$ 为输入会使欧几里得算法的复杂度达到最坏情况（具体参见[维基 - 拉梅](https://en.wikipedia.org/wiki/Gabriel_Lamé)）。
 
+### 模意义下的周期性
+
+考虑模 $P$ 意义下斐波那契数列的周期性。
+
+考虑这样 $p^2+1$  对斐波那契数：
+
+$$
+(f_1,f_2),(f_2,f_3),\cdots,(f_{p^2+1},f_{p^2+2})
+$$
+
+由[鸽巢原理](#鸽巢原理)，至少存在两对 $(f_a,f_{a+1}),(f_b,f_{b+1})$ 满足 $f_a=f_b,f_{a+1}=f_{b+1}$。
+
+这样，生成的下一个数是相同的，因此模意义下斐波那契数列具有**周期性**。
+
+#### 皮萨诺周期
+
+模 $p$ 意义下的斐波那契数列的最小正周期被称为皮萨诺周期，记作 $\pi(p)$，且：
+
+$$
+\pi(p)\leq6p
+$$
+
+$\pi(p)=6p$ 成立当且仅当 $p=2\times5^r\land r>1$。
+
+若 $p$ 不能表示为 $2\times5^r$ 的形式，则 $\pi(p)\leq4p$.
+
 ## Stirling 数 斯特林数
 
 <details class="note">
@@ -2030,6 +1963,43 @@ $$
 
 ~~不会。~~
 
+
+
+### 普通幂与上升幂
+
+所谓上升幂，即记 $x^{\overline{n}}$ 表示：
+
+$$
+x^{\overline{n}}=\prod_{i=0}^{n-1}(x+i)=x(x+1)(x+2)\cdots(x+n-1)
+$$
+
+则有：
+
+$$
+\begin{aligned}
+x^{\overline{n}}&=\sum_{k=0}^n\begin{bmatrix}n\\k\end{bmatrix}x^k\\
+x^n&=\sum_{k=0}^n\begin{Bmatrix}n\\k\end{Bmatrix}(-1)^{n-k}x^{\overline k}
+\end{aligned}
+$$
+
+### 普通幂与下降幂
+
+所谓下降幂，即记 $x^{\underline n}$ 表示：
+
+$$
+x^{\underline{n}}=\prod_{i=0}^{n-1}(x-i)=x(x-1)(x-2)\cdots(x-n+1)
+$$
+
+则有：
+
+$$
+\begin{aligned}
+x^{\underline{n}}&=\sum_{k=0}^n\begin{bmatrix}n\\k\end{bmatrix}(-1)^{n-k}x^k\\
+x^n&=\sum_{k=0}^n\begin{Bmatrix}n\\k\end{Bmatrix}x^{\underline{k}}
+\end{aligned}
+$$
+
+
 ## Catalan 数 卡特兰数
 
 Catalan 数是一个定义的数列，可以用于求解一些问题，例如：
@@ -2037,6 +2007,7 @@ Catalan 数是一个定义的数列，可以用于求解一些问题，例如：
 * 对角线不相交的情况下，将一个凸多边形区域分成三角形区域的方法数。
 * 在一个大小为 $n\times n$ 的方格图的左下角走到右上角，每次只能向右或向上一个单位，不走到对角线 $y=x$ 上方（但可以触碰）的方案数。
 * 已知一个栈的入栈序列为 $a_1,a_2,a_3,\cdots,a_n$，求其可能的出栈序列的数目。
+* $n$ 个节点构成的不同的二叉树的数目。（[[TJOI2015] 概率论](/2025/07/14/4/)）
 * 更多参见[OI Wiki](https://oi-wiki.org/math/combinatorics/catalan/#catalan-数列)。
 
 满足边界条件 $f_0=1$。
@@ -2046,7 +2017,7 @@ Catalan 数是一个定义的数列，可以用于求解一些问题，例如：
 Catalan 数的递推式为：
 
 $$
-f_n=\sum_{i=0}^{n-1}f_{i-1}f_{n-i-1}
+f_n=\sum_{i=0}^{n-1}f_if_{n-i-1}
 $$
 
 接下来从两个问题的角度分析 Catalan 数的应用。
@@ -2096,6 +2067,24 @@ $$
 $$
 f_n=\frac{1}{n+1}\binom{2n}{n}
 $$
+
+## 贝尔数
+
+记 $B_n$ 为将 $n$ 个互不相同的元素划分为若干个互不区分的集合的方案数。
+
+则有：
+
+$$
+B_{n+1}=\sum_{k=1}^n\binom{n}{k}B_k
+$$
+
+同时满足：
+
+$$
+B_n=\sum_{k=0}^n\begin{Bmatrix}n\\k\end{Bmatrix}
+$$
+
+贝尔数本身其实没什么意义，但是注意到 $B_{13}=27644437,B_{14}=190899322$，因此在此类问题中，搜索的复杂度可以接受到 $n=14$。
 
 # 容斥原理与鸽巢原理
 
@@ -2278,7 +2267,7 @@ $$
 
 #### $\alpha(k)$ 与 $\beta(k)$ 的定义
 
-记 $\alpha(k)$ 为**至少**具有 $k$ 个性质的元素个数（但元素满足多个性质时，**会重复计数**）。
+记 $\alpha(k)$ 为**“至少”**具有 $k$ 个性质的元素个数（但元素满足多个性质时，**会重复计数**）。
 
 $$
 \begin{aligned}
@@ -2383,7 +2372,7 @@ $$
 答案即所有 $x_i$ 均满足其性质 $x_i\leq b_i$ 时的可能情况，即：
 
 $$
-\vert S_1\bigcap S_2\bigcap S_3\bigcap\cdots\bigcap S_n\vert=\vert U\vert-\left\vert\overline{S_1}\bigcup\overline{S_2}\bigcup\overline{S_3}\bigcup\cdots\bigcup\overline{S_n}\right\vert
+\vert S_1\cap S_2\cap S_3\cap\cdots\cap S_n\vert=\vert U\vert-\left\vert\overline{S_1}\cup\overline{S_2}\cup\overline{S_3}\cup\cdots\cup\overline{S_n}\right\vert
 $$
 
 ### 错排问题
@@ -2423,8 +2412,6 @@ $$
         由加法原理，合并贡献得到 $D_n=(n-1)(D_{n-1}+D_{n-2})$。
     </p>
 </details>
-
-
 变形上式，得到：
 
 $$
@@ -2441,6 +2428,73 @@ D_n&=n\cdot D_{n-1}+(-1)^n
 $$
 
 $D_0$ 没有意义。
+
+但实际上还有一个看起来非常天才的表示方法：
+
+$$
+D_n=\begin{cases}
+\left\lfloor\dfrac{n!}e\right\rfloor&n\bmod 2=1\\
+\left\lceil\dfrac{n!}e\right\rceil&n\bmod2=0
+\end{cases}
+$$
+
+但是这在 OI 中基本没用，因为模意义下不能取整。（但是这告诉我们，错位排列的密度大约为 $\dfrac1e$）。
+
+## 容斥原理一般化
+
+对于两个对于集合的函数 $f(S),g(S)$：
+
+* 若 $g(S)=\sum\limits_{T\subseteq S}f(T)$，则有：
+  
+  $$
+  f(S)=\sum_{T\subseteq S}(-1)^{\vert S\vert-\vert T\vert}g(T)
+  $$
+  
+* 若 $g(S)=\sum\limits_{T\supseteq S}f(T)$，则有：
+  
+  $$
+  f(S)=\sum_{T\supseteq S}(-1)^{\vert T\vert-\vert S\vert}g(T)
+  $$
+  
+
+## Min-max 容斥
+
+对于满足全序关系且可加减的序列 $\langle x_1,x_2,\cdots,x_n\rangle$，设 $S=\lbrace1,2,3,\cdots,n\rbrace$，有：
+
+$$
+\begin{aligned}
+\max_{i\in S}x_i&=\sum_{T\subseteq S}(-1)^{\vert T\vert-1}\min_{i\in T}x_i\\
+\min_{i\in S}x_i&=\sum_{T\subseteq S}(-1)^{\vert T\vert-1}\max_{i\in T}x_i
+\end{aligned}
+$$
+
+这对于期望也是存在的，因此常常在求解**期望问题**中用到。
+
+即：
+
+$$
+\begin{aligned}
+E\left(\max_{i\in S}x_i\right)&=\sum_{T\subseteq S}(-1)^{\vert T\vert-1}E\left(\min_{i\in T}x_i\right)\\
+E\left(\min_{i\in S}x_i\right)&=\sum_{T\subseteq S}(-1)^{\vert T\vert-1}E\left(\max_{i\in T}x_i\right)\\
+\end{aligned}
+$$
+
+
+## kth Min-Max 容斥
+
+记 $\operatorname*{kthmax}$ 表示第 $k$ 大的元素，$\operatorname*{kthmin}$ 同理。
+
+则有：
+
+$$
+\begin{aligned}
+\operatorname*{kthmax}_{i\in S}x_i&=\sum_{T\subseteq S}(-1)^{\vert T\vert-k}\dbinom{\vert T\vert-1}{k-1}\operatorname*{kthmin}_{i\in T}x_i\\
+\operatorname*{kthmin}_{i\in S}x_i&=\sum_{T\subseteq S}(-1)^{\vert T\vert-k}\dbinom{\vert T\vert-1}{k-1}\operatorname*{kthmax}_{i\in T}x_i\\
+E\left(\operatorname*{kthmax}_{i\in S}x_i\right)&=\sum_{T\subseteq S}(-1)^{\vert T\vert-k}\dbinom{\vert T\vert-1}{k-1}E\left(\operatorname*{kthmin}_{i\in T}x_i\right)\\
+E\left(\operatorname*{kthmin}_{i\in S}x_i\right)&=\sum_{T\subseteq S}(-1)^{\vert T\vert-k}\dbinom{\vert T\vert-1}{k-1}E\left(\operatorname*{kthmax}_{i\in T}x_i\right)\\
+\end{aligned}
+$$
+
 
 ## 鸽巢原理
 
