--- a/_posts/2025-01-22-7.md
+++ b/_posts/2025-01-22-7.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "题解：[POI2008] STA-Station"
-subtitle: "洛谷P3478"
+subtitle: "洛谷P3478 | 换根 DP"
 date: 2025-1-22
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
@@ -12,6 +12,7 @@ tags:
   - DP
   - 树型DP
 words:
+  - 换根DP
   - 树型 DP
 ---
 
