--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -14,6 +14,7 @@ tags:
   - 省选/NOI−
   - 未完
 words:
+  - kthMin-max
   - 二项式定理
   - 二项式推论
   - 加法原理
@@ -1909,7 +1910,7 @@ $$
 <details class="note" open>
     <summary>轮换的定义</summary>
     <p>
-        一个轮换即一个首尾相接的圆排列，能够通过旋转而互相转换的轮换等价。
+        一个轮换即一个首尾相接的<b>圆排列</b>，能够通过旋转而互相转换的轮换等价。
     </p>
     <p>
         即：若 $[a,b,c,d]$ 是一个轮换，则：
@@ -1920,6 +1921,7 @@ $$
         $$
     </p>
 </details>
+
 
 #### 递推式
 
@@ -1987,7 +1989,7 @@ $$
 所谓下降幂，即记 $x^{\underline n}$ 表示：
 
 $$
-x^{\underline{n}}=\prod_{i=0}^{n-1}(x-i)=x(x-1)(x-2)\cdots(x-n+1)
+x^{\underline{n}}=\prod_{i=0}^{n-1}(x-i)=x(x-1)(x-2)\cdots(x-n+1)=P^{n}_{x}=\dbinom{x}{n}n!
 $$
 
 则有：
@@ -1995,7 +1997,8 @@ $$
 $$
 \begin{aligned}
 x^{\underline{n}}&=\sum_{k=0}^n\begin{bmatrix}n\\k\end{bmatrix}(-1)^{n-k}x^k\\
-x^n&=\sum_{k=0}^n\begin{Bmatrix}n\\k\end{Bmatrix}x^{\underline{k}}
+x^n&=\sum_{k=0}^n\begin{Bmatrix}n\\k\end{Bmatrix}x^{\underline{k}}\\
+&=\sum_{k=0}^n\begin{Bmatrix}n\\k\end{Bmatrix}k!\dbinom{n}{k}
 \end{aligned}
 $$
 
@@ -2122,7 +2125,7 @@ $$
 $$
 \begin{aligned}
 \left\vert\bigcup_{i=1}^nS_i\right\vert&=\sum_{1\leq i\leq n}\vert S_i\vert-\sum_{1\leq i<j\leq n}\vert S_i\bigcap S_j\vert+\sum_{1\leq i<j<k\leq n}\vert S_i\bigcap S_j\bigcap S_k\vert-\cdots+(-1)^{n-1}\left\vert\bigcap_{i=1}^n S_i\right\vert\\
-&=\sum_{i=1}^n(-1)^{i-1}\sum_{1\leq a_1<a_2<\cdots<a_i\leq n}\left\vert\bigcap_{j=1}^iS_{a_j}\right\vert
+&=\sum_{i=1}^n(-1)^{i-1}\sum_{1\leq a_1<a_2<\cdots<a_i\leq n}\left\vert\bigcap_{j=1}^iS_{a_j}\right\vert\\
 \end{aligned}
 $$
 
@@ -2449,9 +2452,9 @@ $$
   $$
   f(S)=\sum_{T\subseteq S}(-1)^{\vert S\vert-\vert T\vert}g(T)
   $$
+  二项式反演即容斥原理的特殊形式。
   
 * 若 $g(S)=\sum\limits_{T\supseteq S}f(T)$，则有：
-  
   $$
   f(S)=\sum_{T\supseteq S}(-1)^{\vert T\vert-\vert S\vert}g(T)
   $$
@@ -2482,19 +2485,20 @@ $$
 
 ## kth Min-Max 容斥
 
-记 $\operatorname*{kthmax}$ 表示第 $k$ 大的元素，$\operatorname*{kthmin}$ 同理。
+记 $\operatorname{kthmax}$ 表示第 $k$ 大的元素，$\operatorname{kthmin}$ 同理。
 
 则有：
 
 $$
 \begin{aligned}
-\operatorname*{kthmax}_{i\in S}x_i&=\sum_{T\subseteq S}(-1)^{\vert T\vert-k}\dbinom{\vert T\vert-1}{k-1}\operatorname*{kthmin}_{i\in T}x_i\\
-\operatorname*{kthmin}_{i\in S}x_i&=\sum_{T\subseteq S}(-1)^{\vert T\vert-k}\dbinom{\vert T\vert-1}{k-1}\operatorname*{kthmax}_{i\in T}x_i\\
-E\left(\operatorname*{kthmax}_{i\in S}x_i\right)&=\sum_{T\subseteq S}(-1)^{\vert T\vert-k}\dbinom{\vert T\vert-1}{k-1}E\left(\operatorname*{kthmin}_{i\in T}x_i\right)\\
-E\left(\operatorname*{kthmin}_{i\in S}x_i\right)&=\sum_{T\subseteq S}(-1)^{\vert T\vert-k}\dbinom{\vert T\vert-1}{k-1}E\left(\operatorname*{kthmax}_{i\in T}x_i\right)\\
+\operatorname*{kthmax}_{i\in S}x_i&=\sum_{T\subseteq S}(-1)^{\vert T\vert-k}\dbinom{\vert T\vert-1}{k-1}\min_{i\in T}x_i\\
+\operatorname*{kthmin}_{i\in S}x_i&=\sum_{T\subseteq S}(-1)^{\vert T\vert-k}\dbinom{\vert T\vert-1}{k-1}\max_{i\in T}x_i\\
+E\left(\operatorname*{kthmax}_{i\in S}x_i\right)&=\sum_{T\subseteq S}(-1)^{\vert T\vert-k}\dbinom{\vert T\vert-1}{k-1}E\left(\min_{i\in T}x_i\right)\\
+E\left(\operatorname*{kthmin}_{i\in S}x_i\right)&=\sum_{T\subseteq S}(-1)^{\vert T\vert-k}\dbinom{\vert T\vert-1}{k-1}E\left(\max_{i\in T}x_i\right)\\
 \end{aligned}
 $$
 
+kth Min-max 容斥常常配合期望、DP 出现。对于这种情况下的 DP 的转移方程，可以参考组合数递推公式。
 
 ## 鸽巢原理
 
