--- a/_posts/2025-7-14-4.md
+++ b/_posts/2025-7-14-4.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "题解：[TJOI2015] 概率论"
-subtitle: "洛谷P3978 | “数学题”"
+subtitle: "洛谷P3978 | “数学题” | 卡特兰数"
 date: 2025-7-14
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
@@ -11,6 +11,7 @@ tags:
   - 省选/NOI−
   - 数学
   - 组合数学
+  - 卡特兰数
 words:
   - 卡特兰数Catalan
 ---
