--- a/_posts/2025-6-7-1.md
+++ b/_posts/2025-6-7-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "线性代数学习笔记"
-subtitle: "行列式"
+subtitle: "矩阵 行列式"
 date: 2025-6-7
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
@@ -11,17 +11,316 @@ tags:
   - 数学
   - 线性代数
   - 提高+/省选−
+  - 普及+/提高
 words:
+  - 矩阵快速幂
   - 逆序对
   - 逆序数
   - 奇排列
   - 偶排列
-  - 洛谷P7112
+  - 洛谷P7112洛谷P3390洛谷P4783
   - 题解：【模板】行列式求值
-  - 题解：行列式求值
+  - 题解：行列式求值题解：【模板】矩阵求逆题解：矩阵求逆
+  - 题解：矩阵快速幂题解：【模板】矩阵快速幂
 ---
 
-> [参考资料](/file/2025/06/det.rar) [参考 Blog](https://www.cnblogs.com/torsor/p/3554028.html)
+> [参考资料](/file/2025/06/det.rar) [参考 Blog](https://www.cnblogs.com/torsor/p/3554028.html) [参考资料](/file/2025/07/16/linear-algebra.pdf)
+
+# 矩阵
+
+## 简介
+
+矩阵源于线性方程组，例如对于以下方程组：
+$$
+\begin{cases}
+x_1+2x_2-x_3&=2\\
+2x_1+x_2+x_3&=7\\
+-x_1+3x_2&=5
+\end{cases}
+$$
+
+将未知数分开，可以写为矩阵：
+
+$$
+\begin{bmatrix}
+1&2&-1\\
+2&1&1\\
+-1&3&0
+\end{bmatrix}
+\begin{bmatrix}
+x_1\\x_2\\x_3
+\end{bmatrix}
+=
+\begin{bmatrix}
+2\\7\\5
+\end{bmatrix}
+$$
+
+由 $n$ 行 $m$ 列共计 $mn$ 个 $a_{i,j}$ 组成的数表 $$\begin{matrix}a_{1,1}&a_{1,2}&\cdots&a_{1,m}\\a_{2,1}&a_{2,2}&\cdots&a_{1,m}\\\vdots&\vdots&\ddots&\vdots\\a_{n,1}&a_{n,2}&\cdots&a_{n,m}\end{matrix}$$ 被称为 $n$ 行 $m$ 列的矩阵，记为 $n\times m$ 矩阵。为表示这是一个整体，可以使用中括号括起，并使用大写字母表示：
+
+$$
+A=\begin{bmatrix}a_{1,1}&a_{1,2}&\cdots&a_{1,m}\\a_{2,1}&a_{2,2}&\cdots&a_{1,m}\\\vdots&\vdots&\ddots&\vdots\\a_{n,1}&a_{n,2}&\cdots&a_{n,m}\end{bmatrix}
+$$
+
+这 $n\times m$ 个数被称为矩阵 $A$ 的元素，简称元。第 $i$ 行第 $j$ 列的元素可以记为 $A_{i,j}$。
+
+* 若 $n=m$，可以称 $A$ 为 $n$ 阶方阵，**OI 中大多数矩阵都是方阵**（如行列式及其应用）。
+* 对于一个方阵：
+  * 若只有主对角线上有 $1$，其余均为 $0$，称其为**单位矩阵**，记为 $E$ 或 $I$。
+  * 若只有主对角线上有非 $0$ 的值，其余均为 $0$，称其为**对角矩阵**。
+  * 若主对角线下方均为 $0$，称为**上三角矩阵**；若主对角线上方均为 $0$，称为**下三角矩阵**。
+* 若矩阵只有一行，称为**行矩阵**或**行向量**。
+* 若矩阵只有一列，称为**列矩阵**或**列向量**。
+
+## 矩阵运算
+
+设矩阵 $A,B$。令 $A$ 是一个 $n_A\times m_A$ 的矩阵，$B$ 是一个 $n_B\times m_B$ 的矩阵。
+
+### 矩阵加减
+
+矩阵 $A,B$ 可以作加减运算，当且仅当 $n_A=n_B,m_A=m_B$。
+
+令 $C=A\pm B$，则有：
+
+$$
+C_{i,j}=A_{i,j}\pm B_{i,j}
+$$
+
+### 矩阵数乘
+
+设数 $k$，令 $C=k\times A$，则有：
+
+$$
+C_{i,j}=kA_{i,j}
+$$
+
+### 矩阵乘法
+
+矩阵 $A,B$ 能够作乘法，**当且仅当** $m_A=n_B$。
+
+令 $C=A\times B$，则有：
+
+$$
+C_{i,j}=\sum_{k=1}^{m_A}A_{i,k}B_{k,j}
+$$
+
+#### 参考代码
+
+```cpp
+struct Matrix{
+	int n;
+	int a[N+1][N+1];
+	Matrix(int realN){
+		n=realN;
+		for(int i=1;i<=n;i++){
+			for(int j=1;j<=n;j++){
+				a[i][j]=0;
+			}
+		}
+	}
+	Matrix(){
+		for(int i=1;i<=n;i++){
+			for(int j=1;j<=n;j++){
+				a[i][j]=0;
+			}
+		}
+	}
+};
+Matrix operator *(Matrix a,Matrix b){
+	Matrix c(a.n);
+	for(int i=1;i<=c.n;i++){
+		for(int j=1;j<=c.n;j++){
+			for(int k=1;k<=c.n;k++){
+				c.a[i][j]=(c.a[i][j]+1ll*a.a[i][k]*b.a[k][j]%P)%P;
+			}
+		}
+	}
+	return c;
+}
+//矩阵快速幂
+Matrix qpow(Matrix base,int n){
+	Matrix ans(base.n);
+	for(int i=1;i<=ans.n;i++){
+		ans.a[i][i]=1;
+	}
+	while(n){
+		if(n&1){
+			ans=ans*base;
+		}
+		base=base*base;
+		n>>=1;
+	}
+	return ans;
+}
+```
+
+### 矩阵运算律
+
+矩阵 $A,B$ 满足：
+
+$$
+\begin{aligned}
+(AB)\times C&=A\times(B\times C)\\
+A(B+C)&=A\times B+A\times C\\
+\end{aligned}
+$$
+
+即，矩阵满足**乘法结合律**与**乘法分配律**。但是，**矩阵 *不一定* 满足乘法交换律**。
+
+考虑矩阵 $A,B$，可以计算 $A\times B=C$，但是 $B\times A=C$ 不一定成立。**甚至于 $B\times A$ 可能都没有意义**。
+
+## 矩阵的逆
+
+设方阵 $A,B$，满足 $A\times B=I$，记 $B=A^{-1}$ 为 $A$ 的逆矩阵。
+
+$A^{-1}$ 存在**当且仅当** $\vert A\vert\neq0$。$\vert A\vert$ 表示 $A$ 的行列式。
+
+考虑将 $A$ 进行若干次变换从而得到 $I$，**这些变换等价于让 $A$ 乘上 $A^{-1}$**。
+
+那么，**确定了一个矩阵 $X$，只要对 $X$ 进行这些已经固定的变换，等价于让 $X$ 乘上 $A^{-1}$**。
+
+因此，从 $I$ 开始进行这些变换，即可得到 $I\times A^{-1}=A^{-1}$。
+
+注：这里的变换指代的是类似于高斯消元法的初等变换。
+
+> [例题链接](https://www.luogu.com.cn/problem/P4783)
+
+### 参考代码
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm> 
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+#define int long long
+typedef long long ll;
+constexpr const int N=400,P=1e9+7;
+int qpow(int base,int n){
+	int ans=1;
+	while(n){
+		if(n&1){
+			ans=1ll*ans*base%P;
+		}
+		base=1ll*base*base%P;
+		n>>=1;
+	}
+	return ans;
+}
+struct Matrix{
+	int n,m;
+	int a[N+1][N+1];
+	Matrix(int realN,int realM=-1){
+		n=realN;
+		if(m!=-1){
+			m=realM;
+		}else{
+			m=n;
+		}
+		for(int i=1;i<=n;i++){
+			for(int j=1;j<=m;j++){
+				a[i][j]=0;
+			}
+		}
+	}
+	Matrix(){
+		
+	}
+	bool inverse(Matrix &ans){
+		Matrix tmp=*this;
+		ans.n=ans.m=n;
+		for(int i=1;i<=n;i++){
+			for(int j=1;j<=n;j++){
+				ans.a[i][j]=(i==j);
+			}
+		}
+		
+		for(int i=1;i<=n;i++){
+			int p=i;
+			for(int j=i+1;j<=n;j++){
+				if(tmp.a[j][i]>tmp.a[p][i]){
+					p=j;
+				}
+			}
+			for(int j=1;j<=n;j++){
+				swap(tmp.a[i][j],tmp.a[p][j]);
+				swap(ans.a[i][j],ans.a[p][j]);
+			}
+			if(!tmp.a[i][i]){
+				return false;
+			}
+			int inv=qpow(tmp.a[i][i],P-2);
+			for(int j=1;j<=n;j++){
+				if(i==j){
+					continue;
+				}
+				int pl=1ll*tmp.a[j][i]*inv%P;
+				for(int k=1;k<=n;k++){
+					tmp.a[j][k]=(tmp.a[j][k]-1ll*pl*tmp.a[i][k])%P;
+					ans.a[j][k]=(ans.a[j][k]-1ll*pl*ans.a[i][k])%P;
+				}
+			} 
+			for(int j=1;j<=n;j++){
+				tmp.a[i][j]=1ll*tmp.a[i][j]*inv%P;
+				ans.a[i][j]=1ll*ans.a[i][j]*inv%P;
+			}
+		}
+		for(int i=1;i<=n;i++){
+			for(int j=1;j<=n;j++){
+				if(ans.a[i][j]<0){
+					ans.a[i][j]+=P;
+				}
+			}
+		}
+		return true;
+	}
+};
+main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	ios::sync_with_stdio(false);
+	cin.tie(0);cout.tie(0);
+	
+	int n;
+	cin>>n;
+	Matrix A(n);
+	for(int i=1;i<=A.n;i++){
+		for(int j=1;j<=A.n;j++){
+			cin>>A.a[i][j];
+		}
+	}
+	Matrix B;
+	if(A.inverse(B)){
+		for(int i=1;i<=B.n;i++){
+			for(int j=1;j<=B.n;j++){
+				cout<<B.a[i][j]<<' ';
+			}
+			cout<<'\n';
+		}
+	}else{
+		cout<<"No Solution\n";
+	}
+	
+	
+	cout.flush(); 
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+
 
 # 行列式
 
@@ -1022,7 +1321,7 @@ x_n=\dfrac{D_n}{D_0}\\
 \end{cases}
 $$
 
-其中，$D_j(1\leq j\leq n)$ 是把 $D_0$ 的第 $j$ 列替换为 $\begin{pmatrix}b_1\\b_2\\\vdots\\b_n\end{pmatrix}$ 得到的 $n$ 阶行列式，即：
+其中，$D_j(1\leq j\leq n)$ 是把 $D_0$ 的第 $j$ 列替换为 $$\begin{pmatrix}b_1\\b_2\\\vdots\\b_n\end{pmatrix}$$ 得到的 $n$ 阶行列式，即：
 
 $$
 D_j=
