--- a/_posts/2025-7-15-5.md
+++ b/_posts/2025-7-15-5.md
@@ -1,35 +1,62 @@
 ---
 layout: post
-title: "题解：[集训队互测 2011] Crash 的文明世界"
-subtitle: "洛谷P4827 | 斯特林数展开下降幂 | 换根 DP"
+title: "题解：[POI 1997] 跳"
+subtitle: "洛谷P5940 | 斐波那契数列"
 date: 2025-7-15
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
   - 题解
-  - NOI/NOI+/CTSC
+  - 省选/NOI−
   - 数学
   - 组合数学
-  - 斯特林数
-  - DP
-  - 树型DP
-  - 下降幂与上升幂
 words:
-  - 换根 DP
-  - 换根DP
-  - 树型 DP
-  - "[集训队互测2011] Crash 的文明世界"
-  - "[集训队互测2011]Crash 的文明世界"
-  - "[集训队互测 2011]Crash 的文明世界"
-
+  - 高精度
+  - Fibonacci 数列
 ---
 
-> [题目传送门](https://www.luogu.com.cn/problem/P4827)
+> [题目传送门](https://www.luogu.com.cn/problem/P5940)
 
 # 题意分析
 
+观察棋子的跳法，不难想到斐波那契数列（本文中“斐波那契数列”均将下标视为无限延伸）。
 
+设斐波那契数列第 $i$ 项为 $f_i$，满足 $f_i=f_{i-1}+f_{i-2}$。
+
+因此可以想到每一个位置都对应斐波那契数列中的某一项。设位置 $i$ 的棋子数量为 $\textit{cnt}_i$。
+
+则两种跳法对应：
+
+* 向左跳：
+  
+  $$
+  \textit{cnt}_{p-2}\leftarrow\textit{cnt}_{p-2}+1\\
+  \textit{cnt}_{p-1}\leftarrow\textit{cnt}_{p-1}+1\\
+  \textit{cnt}_p\leftarrow\textit{cnt}_p-1\\
+  $$
+  
+  可以发现，这即将 $f_p$ 转化为 $f_{p-1},f_{p-2}$。
+  
+* 向右跳：同理，将 $f_{p-1},f_{p-2}$ 转化为 $f_p$。
+
+那么，题目即要求我们**构造一组互不相邻的斐波那契数**。
+
+容易发现，这些斐波那契数的**总和不变**，因此可以算出来记作 $g$。
+
+想要构造互不相邻的斐波那契数，可以考虑**贪心**。**从大到小枚举**斐波那契数 $f_k$，若 $g\geq f_k$ 就分配一个 $k$，同时令 $g\leftarrow g-f_k$。
+
+这样贪心一定能构造一组解。考虑反证。
+
+假设 $g\geq f_{k},g-f_k\geq f_{k-1}$。那么就有 $g\geq f_k+f_{k-1}=f_{k+1}$，那么就不会分配 $k-1,k$ 而是分配 $k+1$。
+
+又因为 $f_i$ 有无穷多个，因此这样一定可以分配完 $g$。
+
+***
+
+当然，在实际代码中，下标非负。因此需要一个偏移量。
+
+同时，这题需要一个高精度。
 
 # AC 代码
 
@@ -233,6 +260,3 @@ int main(){
 	return 0;
 }
 ```
-
-
-
